se agrego estrutura base del informacion-estrategica

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2053,6 +2053,17 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "ad5161f8": {
+          "id": "ad5161f8",
+          "path": "informacion-estrategica.html",
+          "output": "informacion-estrategica.html",
+          "name": "informacion-estrategica.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
